--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "request": "^2.88.0",
     "through2": "^3.0.1",
     "url-join": "^4.0.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "jpeg-autorotate": "^5.0.1"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
